--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "."
   command = "ng build --configuration production"
-  publish = "dist/frontend"
+  publish = "dist/frontend/browser"
 
 [build.environment]
   NODE_VERSION = "18"
